# Game

./: CMakeLists.txt  README.md
Source Files/: CMakeLists.txt  Goldtile.frag  main.cpp
Source Files/Anoyher/include/: GraphicControler.hpp  GraphicObject.h  Keyboard.h  PhysicControler.hpp
Source Files/Anoyher/src/: GraphicObject.cpp  Keyboard.cpp  PhysicObject.cpp
Source Files/CustomBuildings/: CustomBuildings.cpp  Tavern.cpp  Tavern.h
Source Files/CustomGUIObjects/: GUIHPViewer.cpp  Menu.cpp  RandomGUIObjects.cpp
Source Files/Fonts/: Fonts.h
Source Files/Graphic/: Irontile.frag
Source Files/OtterCustomThings/: GlobalEvents.cpp  Tasks.h
Source Files/Races/: TestRace.h
Source Files/Source/: AddObject.cpp  AddObject.h  Control.cpp  Control.h  FastUnitCreate.cpp  FastUnitCreate.h  Fraction.cpp  Fraction.h  Functions.cpp  Functions.h  Unit.cpp  Unit.h  WrapedText.cpp  WrapedText.h
Source Files/Source/Anoyher/: EffectObject.cpp  EffectObject.h  Keyboard.cpp  Keyboard.h  Object.cpp  Object.hpp  ObjectInserter.cpp  ObjectInserter.hpp  Position.cpp  Position.h  mainControler.cpp  mainControler.hpp  uint32X2.cpp  uint32X2.hpp
Source Files/Source/Anoyher/Graphic/: GraphicControler.cpp  GraphicControler.hpp  GraphicObject.cpp  GraphicObject.h  ViewInfo.cpp  ViewInfo.hpp
Source Files/Source/Anoyher/Physic/: Circle.cpp  Circle.h  CollideAll.cpp  CollideAll.h  NRR.cpp  NRR.h  PhysicControler.cpp  PhysicControler.hpp  PhysicObject.cpp  PhysicObject.h  PhysicShape.cpp  PhysicShape.h
Source Files/Source/Buildings/: Building.cpp  Building.h  BuildingBlueprintButton.cpp  BuildingBlueprintButton.h  BuildingConstruction.cpp  BuildingConstruction.h  Collision.cpp  Collision.h  Construction.cpp  Construction.h  GOIECreateButton.cpp  GOIECreateButton.h  OICreateButton.cpp  OICreateButton.h  ResourceDemand.cpp  ResourceDemand.h
Source Files/Source/Buildings/Forester/: Forester.cpp  Forester.h  ForesterBlueprintButton.cpp  ForesterBlueprintButton.h  ForesterConstruction.cpp  ForesterConstruction.h  GOIECBForester.cpp  GOIECBForester.h  OICBForester.cpp  OICBForester.h
Source Files/Source/Buildings/House/: GOIECBHouse.cpp  GOIECBHouse.h  House.cpp  House.h  HouseBlueprintButton.cpp  HouseBlueprintButton.h  HouseConstruction.cpp  HouseConstruction.h  OICBHouse.cpp  OICBHouse.h
Source Files/Source/Buildings/Magazine/: GOIECBMagazine.cpp  GOIECBMagazine.h  Magazine.cpp  Magazine.h  MagazineBlueprintButton.cpp  MagazineBlueprintButton.h  MagazineConstruction.cpp  MagazineConstruction.h  OICBMagazine.cpp  OICBMagazine.h
Source Files/Source/Buildings/Mine/: GOIECBMine.cpp  GOIECBMine.h  Mine.cpp  Mine.h  MineBlueprintButton.cpp  MineBlueprintButton.h  MineConstruction.cpp  MineConstruction.h  OICBMine.cpp  OICBMine.h  PreMineConstruction.cpp  PreMineConstruction.h
Source Files/Source/Buildings/Tavern/: GOIECBTavern.cpp  GOIECBTavern.h  GOIEPushareButton.cpp  GOIEPushareButton.h  NPCinTavern.cpp  NPCinTavern.h  OICBTavern.cpp  OICBTavern.h  Tavern.cpp  Tavern.h  TavernBlueprintButton.cpp  TavernBlueprintButton.h  TavernConstruction.cpp  (+1 more)
Source Files/Source/Creature/: Creature.cpp  Creature.h  PreBuilding.cpp  PreBuilding.h  Sight.cpp  Sight.h  SightEffect.cpp  SightEffect.h
Source Files/Source/Economy/: Economy.cpp  Economy.h  EconomyElement.cpp  EconomyElement.h
Source Files/Source/Events/: BuildingSurvive.cpp  BuildingSurvive.h  CollisionFractionEffect.cpp  CollisionFractionEffect.h  EndOnNoFractionObjects.cpp  EndOnNoFractionObjects.h  MagazineSurvive.cpp  MagazineSurvive.h  OnBarracksDestroy.cpp  OnBarracksDestroy.h  OnBuildingDestroy.cpp  OnBuildingDestroy.h  RoundEnd.cpp  RoundEnd.h
Source Files/Source/Fonts/: Fonts.cpp  Fonts.h
Source Files/Source/GUI/: GUI.cpp  GUI.h  GUIBlueprintButton.cpp  GUIBlueprintButton.h  GUIObjectInfo.cpp  GUIObjectInfo.h  GUIResource.cpp  GUIResource.h  ResourceInfo.cpp  ResourceInfo.h
Source Files/Source/HP/: HP.cpp  HP.h  WoodenHP.cpp  WoodenHP.h
Source Files/Source/Items/: Item.cpp  Item.h  ResourceItem.cpp  ResourceItem.h
Source Files/Source/Map/: Ground.cpp  Ground.h  Map.cpp  Map.h  Tile.cpp  Tile.h
Source Files/Source/Markable/: BlueprintButton.cpp  BlueprintButton.h  Clickable1.cpp  Clickable1.h  Clickable2.cpp  Clickable2.h  Info.cpp  Info.h  MarkBuilding.cpp  MarkBuilding.h  MarkUnit.cpp  MarkUnit.h  Markable.cpp  Markable.h  MultiUnitSelection.cpp  MultiUnitSelection.h  NonClickable.cpp  NonClickable.h  Slot.cpp  Slot.h  TileOccupy.cpp  TileOccupy.h
Source Files/Source/Materials/: BuildMaterial.cpp  BuildMaterial.h  Resource.cpp  Resource.h  ResourceStorage.cpp  ResourceStorage.h
Source Files/Source/Pointers/: SafePointer.cpp  SafePointer.h  list_pointer.cpp  list_pointer.h  uint32_t_pointer.cpp  uint32_t_pointer.h  void_pointer.cpp  void_pointer.h
Source Files/Source/Races/: TestRace.h
Source Files/Source/Skills/: BuildOrder.cpp  BuildOrder.h  Building1.cpp  Building1.h  CloseCombat1.cpp  CloseCombat1.h  CloseCombat2.cpp  CloseCombat2.h  Dereserve.cpp  Dereserve.h  Gathering1.cpp  Gathering1.h  Mining1.cpp  Mining1.h  NonCombatSkill.cpp  NonCombatSkill.h  Shooting1.cpp  Shooting1.h  Skill.cpp  Skill.h  Working1.cpp  Working1.h
Source Files/Source/Tasks/: CUOAScanObject.cpp  CUOAScanObject.h  CreateUnitsOnAproach.cpp  CreateUnitsOnAproach.h  CreateUnitsOnFractionAproach.cpp  CreateUnitsOnFractionAproach.h  CreateUnitsOnIDAproach.cpp  CreateUnitsOnIDAproach.h  Offense1Task.cpp  Offense1Task.h
Source Files/Source/Textures/: TextureTiles.cpp  TextureTiles.h  Textures.cpp  Textures.h
Source Files/Source/projectile/: projectile.cpp  projectile.h  projectileEff.cpp  projectileEff.h
Source Files/Textures/: Textures.cpp  Textures.h
Source Files/include/: Building.h  Economy.h  Fraction.h  Functions.h  GUI.h  GUIObjectInfoElement.h  HP.h  Item.h  Markable.h  Materials.h  ObjectInfo.h  PreBuilding.h  SafePointer.h  Skill.h  Unit.h  WrapedText.h
Source Files/src/: Building.cpp  Construction.cpp  Economy.cpp  Functions.cpp  HP.cpp  Map.cpp  Materials.cpp  NaturalResource.cpp  SafePointer.cpp  Unit.cpp
(+222 files in other folders)
