cmake_minimum_required(VERSION 3.1)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS "-std=c++11")
project(Game)
find_package(SFML 2.5.1 COMPONENTS graphics REQUIRED)
target_link_libraries(Game sfml-graphics sfml-window sfml-system)
add_executable(Game main.cpp 
	Source/AddObject.cpp
	Source/AddObject.h
	Source/Anoyher/EffectObject.cpp
	Source/Anoyher/EffectObject.h
	Source/Anoyher/Graphic/GraphicControler.cpp
	Source/Anoyher/Graphic/GraphicControler.hpp
	Source/Anoyher/Graphic/GraphicObject.cpp
	Source/Anoyher/Graphic/GraphicObject.h
	Source/Anoyher/Graphic/ViewInfo.cpp
	Source/Anoyher/Graphic/ViewInfo.hpp
	Source/Anoyher/Keyboard.cpp
	Source/Anoyher/Keyboard.h
	Source/Anoyher/Object.cpp
	Source/Anoyher/Object.hpp
	Source/Anoyher/ObjectInserter.cpp
	Source/Anoyher/ObjectInserter.hpp
	Source/Anoyher/Physic/Circle.cpp
	Source/Anoyher/Physic/Circle.h
	Source/Anoyher/Physic/CollideAll.cpp
	Source/Anoyher/Physic/CollideAll.h
	Source/Anoyher/Physic/NRR.cpp
	Source/Anoyher/Physic/NRR.h
	Source/Anoyher/Physic/PhysicControler.cpp
	Source/Anoyher/Physic/PhysicControler.hpp
	Source/Anoyher/Physic/PhysicObject.cpp
	Source/Anoyher/Physic/PhysicObject.h
	Source/Anoyher/Physic/PhysicShape.cpp
	Source/Anoyher/Physic/PhysicShape.h
	Source/Anoyher/Position.cpp
	Source/Anoyher/Position.h
	Source/Anoyher/mainControler.cpp
	Source/Anoyher/mainControler.hpp
	Source/Anoyher/uint32X2.cpp
	Source/Anoyher/uint32X2.hpp
	Source/Buildings/Building.cpp
	Source/Buildings/Building.h
	Source/Buildings/BuildingBlueprintButton.cpp
	Source/Buildings/BuildingBlueprintButton.h
	Source/Buildings/BuildingConstruction.cpp
	Source/Buildings/BuildingConstruction.h
	Source/Buildings/Collision.cpp
	Source/Buildings/Collision.h
	Source/Buildings/Construction.cpp
	Source/Buildings/Construction.h
	Source/Buildings/Forester/Forester.cpp
	Source/Buildings/Forester/Forester.h
	Source/Buildings/Forester/ForesterBlueprintButton.cpp
	Source/Buildings/Forester/ForesterBlueprintButton.h
	Source/Buildings/Forester/ForesterConstruction.cpp
	Source/Buildings/Forester/ForesterConstruction.h
	Source/Buildings/Forester/GOIECBForester.cpp
	Source/Buildings/Forester/GOIECBForester.h
	Source/Buildings/Forester/OICBForester.cpp
	Source/Buildings/Forester/OICBForester.h
	Source/Buildings/GOIECreateButton.cpp
	Source/Buildings/GOIECreateButton.h
	Source/Buildings/House/GOIECBHouse.cpp
	Source/Buildings/House/GOIECBHouse.h
	Source/Buildings/House/House.cpp
	Source/Buildings/House/House.h
	Source/Buildings/House/HouseBlueprintButton.cpp
	Source/Buildings/House/HouseBlueprintButton.h
	Source/Buildings/House/HouseConstruction.cpp
	Source/Buildings/House/HouseConstruction.h
	Source/Buildings/House/OICBHouse.cpp
	Source/Buildings/House/OICBHouse.h
	Source/Buildings/Magazine/GOIECBMagazine.cpp
	Source/Buildings/Magazine/GOIECBMagazine.h
	Source/Buildings/Magazine/Magazine.cpp
	Source/Buildings/Magazine/Magazine.h
	Source/Buildings/Magazine/MagazineBlueprintButton.cpp
	Source/Buildings/Magazine/MagazineBlueprintButton.h
	Source/Buildings/Magazine/MagazineConstruction.cpp
	Source/Buildings/Magazine/MagazineConstruction.h
	Source/Buildings/Magazine/OICBMagazine.cpp
	Source/Buildings/Magazine/OICBMagazine.h
	Source/Buildings/Mine/GOIECBMine.cpp
	Source/Buildings/Mine/GOIECBMine.h
	Source/Buildings/Mine/Mine.cpp
	Source/Buildings/Mine/Mine.h
	Source/Buildings/Mine/MineBlueprintButton.cpp
	Source/Buildings/Mine/MineBlueprintButton.h
	Source/Buildings/Mine/MineConstruction.cpp
	Source/Buildings/Mine/MineConstruction.h
	Source/Buildings/Mine/OICBMine.cpp
	Source/Buildings/Mine/OICBMine.h
	Source/Buildings/Mine/PreMineConstruction.cpp
	Source/Buildings/Mine/PreMineConstruction.h
	Source/Buildings/OICreateButton.cpp
	Source/Buildings/OICreateButton.h
	Source/Buildings/ResourceDemand.cpp
	Source/Buildings/ResourceDemand.h
	Source/Buildings/Tavern/GOIECBTavern.cpp
	Source/Buildings/Tavern/GOIECBTavern.h
	Source/Buildings/Tavern/GOIEPushareButton.cpp
	Source/Buildings/Tavern/GOIEPushareButton.h
	Source/Buildings/Tavern/NPCinTavern.cpp
	Source/Buildings/Tavern/NPCinTavern.h
	Source/Buildings/Tavern/OICBTavern.cpp
	Source/Buildings/Tavern/OICBTavern.h
	Source/Buildings/Tavern/Tavern.cpp
	Source/Buildings/Tavern/Tavern.h
	Source/Buildings/Tavern/TavernBlueprintButton.cpp
	Source/Buildings/Tavern/TavernBlueprintButton.h
	Source/Buildings/Tavern/TavernConstruction.cpp
	Source/Buildings/Tavern/TavernConstruction.h
	Source/Buildings/Tower/Barracks.cpp
	Source/Buildings/Tower/Barracks.h
	Source/Buildings/Tower/GOIECBStoneTower.cpp
	Source/Buildings/Tower/GOIECBStoneTower.h
	Source/Buildings/Tower/GOIECBTower.cpp
	Source/Buildings/Tower/GOIECBTower.h
	Source/Buildings/Tower/OICBStoneTower.cpp
	Source/Buildings/Tower/OICBStoneTower.h
	Source/Buildings/Tower/OICBTower.cpp
	Source/Buildings/Tower/OICBTower.h
	Source/Buildings/Tower/StoneTower.cpp
	Source/Buildings/Tower/StoneTower.h
	Source/Buildings/Tower/StoneTowerConstruction.cpp
	Source/Buildings/Tower/StoneTowerConstruction.h
	Source/Buildings/Tower/Tower.cpp
	Source/Buildings/Tower/Tower.h
	Source/Buildings/Tower/TowerBlueprintButton.cpp
	Source/Buildings/Tower/TowerBlueprintButton.h
	Source/Buildings/Tower/TowerConstruction.cpp
	Source/Buildings/Tower/TowerConstruction.h
	Source/Buildings/Workshop/GOIECBWorkshop.cpp
	Source/Buildings/Workshop/GOIECBWorkshop.h
	Source/Buildings/Workshop/OICBWorkshop.cpp
	Source/Buildings/Workshop/OICBWorkshop.h
	Source/Buildings/Workshop/Workshop.cpp
	Source/Buildings/Workshop/Workshop.h
	Source/Buildings/Workshop/WorkshopBlueprintButton.cpp
	Source/Buildings/Workshop/WorkshopBlueprintButton.h
	Source/Buildings/Workshop/WorkshopConstruction.cpp
	Source/Buildings/Workshop/WorkshopConstruction.h
	Source/Control.cpp
	Source/Control.h
	Source/Creature/Creature.cpp
	Source/Creature/Creature.h
	Source/Creature/PreBuilding.cpp
	Source/Creature/PreBuilding.h
	Source/Creature/Sight.cpp
	Source/Creature/Sight.h
	Source/Creature/SightEffect.cpp
	Source/Creature/SightEffect.h
	Source/Economy/Economy.cpp
	Source/Economy/Economy.h
	Source/Economy/EconomyElement.cpp
	Source/Economy/EconomyElement.h
	Source/Events/BuildingSurvive.cpp
	Source/Events/BuildingSurvive.h
	Source/Events/CollisionFractionEffect.cpp
	Source/Events/CollisionFractionEffect.h
	Source/Events/EndOnNoFractionObjects.cpp
	Source/Events/EndOnNoFractionObjects.h
	Source/Events/MagazineSurvive.cpp
	Source/Events/MagazineSurvive.h
	Source/Events/OnBarracksDestroy.cpp
	Source/Events/OnBarracksDestroy.h
	Source/Events/OnBuildingDestroy.cpp
	Source/Events/OnBuildingDestroy.h
	Source/Events/RoundEnd.cpp
	Source/Events/RoundEnd.h
	Source/FastUnitCreate.cpp
	Source/FastUnitCreate.h
	Source/Fonts/Fonts.cpp
	Source/Fonts/Fonts.h
	Source/Fraction.cpp
	Source/Fraction.h
	Source/Functions.cpp
	Source/Functions.h
	Source/GUI/GUI.cpp
	Source/GUI/GUI.h
	Source/GUI/GUIBlueprintButton.cpp
	Source/GUI/GUIBlueprintButton.h
	Source/GUI/GUIObjectInfo.cpp
	Source/GUI/GUIObjectInfo.h
	Source/GUI/GUIObjects/CTextureReferenceIllusion.cpp
	Source/GUI/GUIObjects/CTextureReferenceIllusion.h
	Source/GUI/GUIObjects/GOIENumber.cpp
	Source/GUI/GUIObjects/GOIENumber.h
	Source/GUI/GUIObjects/GOIEPT.cpp
	Source/GUI/GUIObjects/GOIEPT.h
	Source/GUI/GUIObjects/GOIEPTHorisontal.cpp
	Source/GUI/GUIObjects/GOIEPTHorisontal.h
	Source/GUI/GUIObjects/GOIEPicture.cpp
	Source/GUI/GUIObjects/GOIEPicture.h
	Source/GUI/GUIObjects/GOIEPointed.cpp
	Source/GUI/GUIObjects/GOIEPointed.h
	Source/GUI/GUIObjects/GOIEText.cpp
	Source/GUI/GUIObjects/GOIEText.h
	Source/GUI/GUIObjects/GUIObjectInfoElement.cpp
	Source/GUI/GUIObjects/GUIObjectInfoElement.h
	Source/GUI/GUIObjects/HPViewer/GUIBar.cpp
	Source/GUI/GUIObjects/HPViewer/GUIBar.h
	Source/GUI/GUIObjects/HPViewer/GUIDoubleUint.cpp
	Source/GUI/GUIObjects/HPViewer/GUIDoubleUint.h
	Source/GUI/GUIObjects/HPViewer/GUIHPViewer.cpp
	Source/GUI/GUIObjects/HPViewer/GUIHPViewer.h
	Source/GUI/GUIObjects/HPViewer/OIBar.cpp
	Source/GUI/GUIObjects/HPViewer/OIBar.h
	Source/GUI/GUIObjects/HPViewer/OIDoubleUint.cpp
	Source/GUI/GUIObjects/HPViewer/OIDoubleUint.h
	Source/GUI/GUIObjects/HPViewer/OIHPViewer.cpp
	Source/GUI/GUIObjects/HPViewer/OIHPViewer.h
	Source/GUI/GUIObjects/Menu/Menu.cpp
	Source/GUI/GUIObjects/Menu/Menu.h
	Source/GUI/GUIObjects/MultiButtons/GOIEDropDown.cpp
	Source/GUI/GUIObjects/MultiButtons/GOIEDropDown.h
	Source/GUI/GUIObjects/MultiButtons/GOIEMBClickandDo.cpp
	Source/GUI/GUIObjects/MultiButtons/GOIEMBClickandDo.h
	Source/GUI/GUIObjects/MultiButtons/GOIEMBSelectOne.cpp
	Source/GUI/GUIObjects/MultiButtons/GOIEMBSelectOne.h
	Source/GUI/GUIObjects/MultiButtons/GOIEMBSelectOneButton.cpp
	Source/GUI/GUIObjects/MultiButtons/GOIEMBSelectOneButton.h
	Source/GUI/GUIObjects/MultiButtons/GOIESingleClickButton.cpp
	Source/GUI/GUIObjects/MultiButtons/GOIESingleClickButton.h
	Source/GUI/GUIObjects/MultiButtons/GOIESlotElement.cpp
	Source/GUI/GUIObjects/MultiButtons/GOIESlotElement.h
	Source/GUI/GUIObjects/MultiButtons/GOIESlotElementsStorage.cpp
	Source/GUI/GUIObjects/MultiButtons/GOIESlotElementsStorage.h
	Source/GUI/GUIObjects/MultiButtons/MUSGUICreate.cpp
	Source/GUI/GUIObjects/MultiButtons/MUSGUICreate.h
	Source/GUI/GUIObjects/MultiButtons/OIDropDown.cpp
	Source/GUI/GUIObjects/MultiButtons/OIDropDown.h
	Source/GUI/GUIObjects/MultiButtons/OIMBClickandDo.cpp
	Source/GUI/GUIObjects/MultiButtons/OIMBClickandDo.h
	Source/GUI/GUIObjects/MultiButtons/OIMBSelectOne.cpp
	Source/GUI/GUIObjects/MultiButtons/OIMBSelectOne.h
	Source/GUI/GUIObjects/MultiButtons/OISlotElementsStorage.cpp
	Source/GUI/GUIObjects/MultiButtons/OISlotElementsStorage.h
	Source/GUI/GUIObjects/OINumber.cpp
	Source/GUI/GUIObjects/OINumber.h
	Source/GUI/GUIObjects/OIPT.cpp
	Source/GUI/GUIObjects/OIPT.h
	Source/GUI/GUIObjects/OIPTHorisontal.cpp
	Source/GUI/GUIObjects/OIPTHorisontal.h
	Source/GUI/GUIObjects/OIPicture.cpp
	Source/GUI/GUIObjects/OIPicture.h
	Source/GUI/GUIObjects/OIPointedu32.cpp
	Source/GUI/GUIObjects/OIPointedu32.h
	Source/GUI/GUIObjects/OIText.cpp
	Source/GUI/GUIObjects/OIText.h
	Source/GUI/GUIObjects/ObjectInfo.cpp
	Source/GUI/GUIObjects/ObjectInfo.h
	Source/GUI/GUIResource.cpp
	Source/GUI/GUIResource.h
	Source/GUI/ResourceInfo.cpp
	Source/GUI/ResourceInfo.h
	Source/HP/HP.cpp
	Source/HP/HP.h
	Source/HP/WoodenHP.cpp
	Source/HP/WoodenHP.h
	Source/Items/Armors/Armor.cpp
	Source/Items/Armors/Armor.h
	Source/Items/Armors/IronPlateArmor.cpp
	Source/Items/Armors/IronPlateArmor.h
	Source/Items/Armors/WoodenArmor.cpp
	Source/Items/Armors/WoodenArmor.h
	Source/Items/Item.cpp
	Source/Items/Item.h
	Source/Items/Recipes/Recipe.cpp
	Source/Items/Recipes/Recipe.h
	Source/Items/Recipes/RecipeIngredient.cpp
	Source/Items/Recipes/RecipeIngredient.h
	Source/Items/Recipes/RecipeProduct.cpp
	Source/Items/Recipes/RecipeProduct.h
	Source/Items/ResourceItem.cpp
	Source/Items/ResourceItem.h
	Source/Items/Tools/ConstructionTool.cpp
	Source/Items/Tools/ConstructionTool.h
	Source/Items/Tools/GatherTool.cpp
	Source/Items/Tools/GatherTool.h
	Source/Items/Tools/MiningTool.cpp
	Source/Items/Tools/MiningTool.h
	Source/Items/Tools/PrimaryCTool.cpp
	Source/Items/Tools/PrimaryCTool.h
	Source/Items/Tools/StorageComponent.cpp
	Source/Items/Tools/StorageComponent.h
	Source/Items/Tools/Tool.cpp
	Source/Items/Tools/Tool.h
	Source/Items/Tools/ToolBox.cpp
	Source/Items/Tools/ToolBox.h
	Source/Items/Weapions/Bow.cpp
	Source/Items/Weapions/Bow.h
	Source/Items/Weapions/CloseCombatItem.cpp
	Source/Items/Weapions/CloseCombatItem.h
	Source/Items/Weapions/HookGun.cpp
	Source/Items/Weapions/HookGun.h
	Source/Items/Weapions/MiniGun.cpp
	Source/Items/Weapions/MiniGun.h
	Source/Items/Weapions/Musket.cpp
	Source/Items/Weapions/Musket.h
	Source/Items/Weapions/Shootgun.cpp
	Source/Items/Weapions/Shootgun.h
	Source/Items/Weapions/SingleShot.cpp
	Source/Items/Weapions/SingleShot.h
	Source/Items/Weapions/SniperRifle.cpp
	Source/Items/Weapions/SniperRifle.h
	Source/Items/Weapions/Spear.cpp
	Source/Items/Weapions/Spear.h
	Source/Items/Weapions/Sword.cpp
	Source/Items/Weapions/Sword.h
	Source/Items/Weapions/Uzi.cpp
	Source/Items/Weapions/Uzi.h
	Source/Map/Ground.cpp
	Source/Map/Ground.h
	Source/Map/Map.cpp
	Source/Map/Map.h
	Source/Map/Tile.cpp
	Source/Map/Tile.h
	Source/Markable/BlueprintButton.cpp
	Source/Markable/BlueprintButton.h
	Source/Markable/Clickable1.cpp
	Source/Markable/Clickable1.h
	Source/Markable/Clickable2.cpp
	Source/Markable/Clickable2.h
	Source/Markable/Info.cpp
	Source/Markable/Info.h
	Source/Markable/MarkBuilding.cpp
	Source/Markable/MarkBuilding.h
	Source/Markable/MarkUnit.cpp
	Source/Markable/MarkUnit.h
	Source/Markable/Markable.cpp
	Source/Markable/Markable.h
	Source/Markable/MultiUnitSelection.cpp
	Source/Markable/MultiUnitSelection.h
	Source/Markable/NonClickable.cpp
	Source/Markable/NonClickable.h
	Source/Markable/Slot.cpp
	Source/Markable/Slot.h
	Source/Markable/TileOccupy.cpp
	Source/Markable/TileOccupy.h
	Source/Materials/BuildMaterial.cpp
	Source/Materials/BuildMaterial.h
	Source/Materials/Natural-Resources/CommonTree.cpp
	Source/Materials/Natural-Resources/CommonTree.h
	Source/Materials/Natural-Resources/NaturalResource.cpp
	Source/Materials/Natural-Resources/NaturalResource.h
	Source/Materials/Natural-Resources/ResourceAvailability.cpp
	Source/Materials/Natural-Resources/ResourceAvailability.h
	Source/Materials/Natural-Resources/TreeCollision.cpp
	Source/Materials/Natural-Resources/TreeCollision.h
	Source/Materials/Resource.cpp
	Source/Materials/Resource.h
	Source/Materials/ResourceStorage.cpp
	Source/Materials/ResourceStorage.h
	Source/Pointers/SafePointer.cpp
	Source/Pointers/SafePointer.h
	Source/Pointers/list_pointer.cpp
	Source/Pointers/list_pointer.h
	Source/Pointers/uint32_t_pointer.cpp
	Source/Pointers/uint32_t_pointer.h
	Source/Pointers/void_pointer.cpp
	Source/Pointers/void_pointer.h
	Source/Races/TestRace.cpp
	Source/Races/TestRace.h
	Source/Skills/BuildOrder.cpp
	Source/Skills/BuildOrder.h
	Source/Skills/Building1.cpp
	Source/Skills/Building1.h
	Source/Skills/CloseCombat1.cpp
	Source/Skills/CloseCombat1.h
	Source/Skills/CloseCombat2.cpp
	Source/Skills/CloseCombat2.h
	Source/Skills/Dereserve.cpp
	Source/Skills/Dereserve.h
	Source/Skills/Gathering1.cpp
	Source/Skills/Gathering1.h
	Source/Skills/Mining1.cpp
	Source/Skills/Mining1.h
	Source/Skills/NonCombatSkill.cpp
	Source/Skills/NonCombatSkill.h
	Source/Skills/Shooting1.cpp
	Source/Skills/Shooting1.h
	Source/Skills/Skill.cpp
	Source/Skills/Skill.h
	Source/Skills/Working1.cpp
	Source/Skills/Working1.h
	Source/Tasks/CUOAScanObject.cpp
	Source/Tasks/CUOAScanObject.h
	Source/Tasks/CreateUnitsOnAproach.cpp
	Source/Tasks/CreateUnitsOnAproach.h
	Source/Tasks/CreateUnitsOnFractionAproach.cpp
	Source/Tasks/CreateUnitsOnFractionAproach.h
	Source/Tasks/CreateUnitsOnIDAproach.cpp
	Source/Tasks/CreateUnitsOnIDAproach.h
	Source/Tasks/Offense1Task.cpp
	Source/Tasks/Offense1Task.h
	Source/Textures/TextureTiles.cpp
	Source/Textures/TextureTiles.h
	Source/Textures/Textures.cpp
	Source/Textures/Textures.h
	Source/Unit.cpp
	Source/Unit.h
	Source/WrapedText.cpp
	Source/WrapedText.h
	Source/projectile/Tool-projectile/SCM.cpp
	Source/projectile/Tool-projectile/SCM.h
	Source/projectile/Tool-projectile/SCMEff.cpp
	Source/projectile/Tool-projectile/SCMEff.h
	Source/projectile/Tool-projectile/constructiontool.cpp
	Source/projectile/Tool-projectile/constructiontool.h
	Source/projectile/Tool-projectile/constructiontoolEff.cpp
	Source/projectile/Tool-projectile/constructiontoolEff.h
	Source/projectile/Tool-projectile/gathertoll.cpp
	Source/projectile/Tool-projectile/gathertoll.h
	Source/projectile/Tool-projectile/gathertollEff.cpp
	Source/projectile/Tool-projectile/gathertollEff.h
	Source/projectile/Weapion-projectile/bullet.cpp
	Source/projectile/Weapion-projectile/bullet.h
	Source/projectile/Weapion-projectile/bulletEff.cpp
	Source/projectile/Weapion-projectile/bulletEff.h
	Source/projectile/Weapion-projectile/chaineffect.cpp
	Source/projectile/Weapion-projectile/chaineffect.h
	Source/projectile/Weapion-projectile/hook.cpp
	Source/projectile/Weapion-projectile/hook.h
	Source/projectile/Weapion-projectile/hookEff.cpp
	Source/projectile/Weapion-projectile/hookEff.h
	Source/projectile/Weapion-projectile/spear.cpp
	Source/projectile/Weapion-projectile/spear.h
	Source/projectile/Weapion-projectile/spearEff.cpp
	Source/projectile/Weapion-projectile/spearEff.h
	Source/projectile/Weapion-projectile/sword.cpp
	Source/projectile/Weapion-projectile/sword.h
	Source/projectile/Weapion-projectile/swordEff.cpp
	Source/projectile/Weapion-projectile/swordEff.h
	Source/projectile/projectile.cpp
	Source/projectile/projectile.h
	Source/projectile/projectileEff.cpp
	Source/projectile/projectileEff.h
)